--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Projeto4</title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <h1>Sorteio da Mega Sena</h1>
 
+    <button onclick="sortear()">Sortear</button>
 
+    <p id="numeros"></p>
     <script src="script.js"></script>
 </body>
 </html>
